--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
 
     //Lotty
     implementation 'com.airbnb.android:lottie:3.4.4'
+
+    //HTTP communication
+    implementation 'com.android.volley:volley:1.1.1'
 }
