--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -24,7 +26,9 @@ android {
     }
 }
 
-dependencies {
+
+
+ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -67,4 +71,29 @@ dependencies {
 
     //HTTP communication
     implementation 'com.android.volley:volley:1.1.1'
+
+
+    def room_version = "2.2.5"
+
+    implementation "androidx.room:room-runtime:$room_version"
+     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // optional - Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
+
+
 }
+
+ allprojects {
+     repositories {
+         google()
+
+         maven {
+             url 'https://dl.google.com/dl/android/maven2/'
+             name 'Google'
+         }
+     }
+ }
