--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,48 +3,47 @@
     package="com.example.prueba_desconecta">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA" />
 
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="true" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config">
-        <meta-data
-            android:name="com.google.android.actions"
-            android:resource="@xml/network_security_config" />
-
-        <activity android:name=".Asocia" />
-        <activity android:name=".Concentra" />
-        <activity android:name=".Revisita">
-            <intent-filter>
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".Escribe" />
-        <activity android:name=".Desconecta" />
-        <activity android:name=".Crea" />
-        <activity android:name=".Descubre" />
-        <activity android:name=".Dibuja" />
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme">
+        <activity android:name=".ScanCodeActivity"></activity>
+        <activity android:name=".QRScanner">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/network_security_config" />
+
+        <activity android:name=".Asocia" />
+        <activity android:name=".Concentra" />
+        <activity android:name=".Revisita"></activity>
+        <activity android:name=".Escribe" />
+        <activity android:name=".Desconecta" />
+        <activity android:name=".Crea" />
+        <activity android:name=".Descubre" />
+        <activity android:name=".Dibuja" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
