--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,6 @@
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
-
-
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -26,9 +24,7 @@ android {
     }
 }
 
-
-
- dependencies {
+dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -72,28 +68,12 @@ android {
     //HTTP communication
     implementation 'com.android.volley:volley:1.1.1'
 
-
-    def room_version = "2.2.5"
-
-    implementation "androidx.room:room-runtime:$room_version"
-     annotationProcessor "androidx.room:room-compiler:$room_version"
-
-    // optional - Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:$room_version"
-
-    // optional - Test helpers
-    testImplementation "androidx.room:room-testing:$room_version"
-
-
+    //QR (no inspectoin Gradle compatible)
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'me.dm7.barcodescanner:zxing:1.9.13'
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0'
+    implementation 'com.google.zxing:core:3.3.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
-
- allprojects {
-     repositories {
-         google()
-
-         maven {
-             url 'https://dl.google.com/dl/android/maven2/'
-             name 'Google'
-         }
-     }
- }
