--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     //adaptador Retrofit para RxJava
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
+    //HttpInterceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
     //Rx
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
 
