--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,23 +22,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ScanCodeActivity"></activity>
-        <activity android:name=".QRScanner"/>
+        <activity android:name=".ui.ScanCodeActivity"></activity>
+        <activity android:name=".ui.QRScanner"/>
         <meta-data
             android:name="com.google.android.actions"
             android:resource="@xml/network_security_config" />
 
-        <activity android:name=".Mood" />
-        <activity android:name=".Monsters" />
-        <activity android:name=".Asocia" />
-        <activity android:name=".Concentra" />
-        <activity android:name=".Revisita"/>
-        <activity android:name=".Escribe" />
-        <activity android:name=".Desconecta" />
-        <activity android:name=".Crea" />
-        <activity android:name=".Descubre" />
-        <activity android:name=".Dibuja" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.Mood" />
+        <activity android:name=".ui.Monsters" />
+        <activity android:name=".ui.Asocia" />
+        <activity android:name=".ui.Concentra" />
+        <activity android:name=".ui.Revisita"/>
+        <activity android:name=".ui.Escribe" />
+        <activity android:name=".ui.Desconecta" />
+        <activity android:name=".ui.Crea" />
+        <activity android:name=".ui.Descubre" />
+        <activity android:name=".ui.Dibuja" />
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
