--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,16 +3,16 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         applicationId "com.example.prueba_desconecta"
-        minSdkVersion 23
-        targetSdkVersion 30
+        minSdkVersion 26
+        targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
-
+        versionName "1.0.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -23,6 +23,11 @@ android {
         }
     }
 }
+
+ ext{
+     androidxVersion = '1.0.2'
+     nav_version = "2.3.1"
+ }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -37,8 +42,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    def nav_version = "2.3.1"
 
     // Java language implementation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
@@ -83,6 +86,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //Puzzle
+    implementation "androidx.appcompat:appcompat:$androidxVersion"
 
 
     implementation("io.coil-kt:coil:1.1.0")
