--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:icon="@drawable/recuperart"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@raw/recuperart_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -30,14 +30,25 @@
             android:name="com.google.android.actions"
             android:resource="@xml/network_security_config" />
 
+        <activity
+            android:name=".ui.Desconnecta_activity.Respiracio_accio"></activity>
+        <activity
+            android:name=".ui.Desconnecta_activity.Respiracio"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.Concentra_activity.Concentra" >
+
+        </activity>
+        <activity
+            android:name=".ui.Crea_activity.Puzzle"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.Mood" />
         <activity android:name=".ui.Monsters" />
-        <activity android:name=".ui.Asocia" />
-        <activity android:name=".ui.Concentra" />
+        <activity android:name=".ui.Associa_activity.Asocia" />
         <activity android:name=".ui.Revisita" />
         <activity android:name=".ui.Escribe" />
-        <activity android:name=".ui.Desconecta" />
-        <activity android:name=".ui.Crea" />
+        <activity android:name=".ui.Desconnecta_activity.Desconecta" />
+        <activity android:name=".ui.Crea_activity.Crea" />
         <activity android:name=".ui.descubre.Descubre" />
         <activity android:name=".ui.Dibuja" />
         <activity android:name=".ui.MainActivity">
