--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,4 +113,10 @@ dependencies {
 
     implementation("io.coil-kt:coil:1.1.0")
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
+
+
+
 }
