--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.prueba_desconecta">
-
     <!-- Permisos necesarios (NO TOCAR) -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera"
-        android:required="true" />
+
+    <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <uses-feature android:name="android.hardware.location.gps" />
+
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".common.MyApp"
@@ -18,7 +20,7 @@
         android:icon="@drawable/recuperart"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@raw/recuperart_round"
+        android:roundIcon="@drawable/recuperart_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -27,48 +29,103 @@
             android:resource="@xml/network_security_config" />
 
         <activity
-            android:name=".ui.ui.elije.Elige"
+            android:name=".ui.Avalua_activity.Avalua"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustPan"/>
+
+        <activity
+            android:name=".ui.Avalua_activity.FinalMonsters"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme"/>
 
-        <activity android:name=".ui.Desconnecta_activity.Respiracio_accio"/>
+        <activity
+            android:name=".ui.Avalua_activity.FinalMood"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"/>
+
+        <activity
+            android:name=".ui.ui.elije.Elige"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
+
+        <activity
+            android:name=".ui.Desconnecta_activity.Respiracio_accio"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
         <activity
             android:name=".ui.Desconnecta_activity.Respiracio"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
-        <activity android:name=".ui.Concentra_activity.Concentra" />
+        <activity
+            android:name=".ui.Concentra_activity.Concentra"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
         <activity
             android:name=".ui.Crea_activity.Puzzle"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <activity android:name=".ui.Mood" />
+        <activity
+            android:name=".ui.Mood"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
-        <activity android:name=".ui.Monsters" />
+        <activity
+            android:name=".ui.Monsters"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
-        <activity android:name=".ui.Associa_activity.Asocia" />
+        <activity
+            android:name=".ui.Associa_activity.Asocia"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize"/>
 
-        <activity android:name=".ui.Revisita" />
+        <activity
+            android:name=".ui.Revisita"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
-        <activity android:name=".ui.Escribe" />
+        <activity
+            android:name=".ui.Escribe"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
-        <activity android:name=".ui.Desconnecta_activity.Desconecta" />
+        <activity
+            android:name=".ui.Desconnecta_activity.Desconecta"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
-        <activity android:name=".ui.Crea_activity.Crea" />
+        <activity
+            android:name=".ui.Crea_activity.Crea"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
-        <activity android:name=".ui.descubre.Descubre" />
+        <activity
+            android:name=".ui.descubre.Descubre"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
-        <activity android:name=".ui.Dibuja" />
+        <activity
+            android:name=".ui.Dibuja"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize"/>
 
-        <activity android:name=".ui.MainActivity">
+        <activity
+            android:name=".ui.MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
