--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,7 +93,7 @@ dependencies {
 
     // Room components
     implementation "androidx.room:room-runtime:2.2.6"
-    compileOnly 'com.google.android.wearable:wearable:2.8.1'
+    compileOnly "com.google.android.wearable:wearable:2.8.1"
     kapt "androidx.room:room-compiler:2.2.6"
     implementation "androidx.room:room-ktx:2.2.6"
     androidTestImplementation "androidx.room:room-testing:2.2.6"
