--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.recuperart">
 
+        <!-- Permisos necesarios (NO TOCAR) -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
-    <!-- Permisos necesarios (NO TOCAR) -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-feature android:name="android.hardware.camera" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -23,13 +22,16 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@drawable/recuperart_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-
-        <activity android:name="com.example.recuperart.ui.experience.VisitasPasadas" />
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="true">
 
         <meta-data
             android:name="com.google.android.actions"
             android:resource="@xml/network_security_config" />
+
+        <activity
+            android:name="com.example.recuperart.ui.experience.VisitasPasadas"
+            android:screenOrientation="portrait"/>
 
         <activity
             android:name="com.example.recuperart.ui.descubre.ImagenObra"
